# TinyAES

./: AES128EXPLANATION.md  CMakeLists.txt  README.md  aes128.c  aes256.c  cbc.c  ecbbench.c
aes/: aes.h  aes128.s  aes256.s
util/: fastxor.h  fastxor.s  print_text.c  testfastxor.c
